[gd_scene load_steps=5 format=3 uid="uid://cwmq38ayrkt2l"]

[ext_resource type="PackedScene" uid="uid://ge3bq2wb10ch" path="res://scenes/pipe/pipe.tscn" id="1_c3cwy"]
[ext_resource type="Script" path="res://scenes/pipes/pipes.gd" id="1_vay8k"]
[ext_resource type="PackedScene" uid="uid://d3yi4ep2j62tq" path="res://scenes/laser/laser.tscn" id="2_5vhw0"]
[ext_resource type="AudioStream" uid="uid://bties6dnojb6m" path="res://assets/audio/score.wav" id="3_2tjx0"]

[node name="Pipes" type="Node2D"]
script = ExtResource("1_vay8k")

[node name="Laser" parent="." instance=ExtResource("2_5vhw0")]

[node name="Upper" parent="." instance=ExtResource("1_c3cwy")]
position = Vector2(0, -80)
rotation = 3.14159

[node name="Lower" parent="." instance=ExtResource("1_c3cwy")]
position = Vector2(0, 80)

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(70, 0)

[node name="ScoreSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_2tjx0")
volume_db = -6.5

[node name="VelocityTimer" type="Timer" parent="."]
autostart = true

[connection signal="body_entered" from="Laser" to="." method="_on_laser_body_entered"]
[connection signal="body_entered" from="Upper" to="." method="_on_pipe_body_entered"]
[connection signal="body_entered" from="Lower" to="." method="_on_pipe_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="on_screen_exited"]
[connection signal="timeout" from="VelocityTimer" to="." method="_on_velocity_timer_timeout"]
